#3 Pre-generate templates for production